--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -99,7 +99,7 @@
             </Grid>
             <Image Source="Images/manage/Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="21" Margin="48,66,0,0"/>
             <Image Source="Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="22" Margin="48,123,0,0" RenderTransformOrigin="-0.143,1.25"/>
-            <Image Source="Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="22" Margin="374,122,0,0" RenderTransformOrigin="-0.143,1.25"/>
+            <Image x:Name="sellicon" Source="Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="22" Margin="374,122,0,0" RenderTransformOrigin="-0.143,1.25"/>
         </Grid>
         <TextBlock x:Name="weightText" Foreground="#45686e" HorizontalAlignment="Center" Margin="297,368,389,0" TextWrapping="Wrap" Text="WEIGHT" VerticalAlignment="Top" Height="29" FontSize="16" Width="114"/>
         <TextBlock x:Name="heightText" Foreground="#45686e" HorizontalAlignment="Center" Margin="297,344,389,0" TextWrapping="Wrap" Text="HEIGHT" VerticalAlignment="Top" Height="26" FontSize="16" Width="114"/>
