--- a/PokemonGo/WpfApp2/backup_use_pokemon_go_format_to_battle/Battle.xaml
+++ b/PokemonGo/WpfApp2/backup_use_pokemon_go_format_to_battle/Battle.xaml
@@ -13,49 +13,49 @@
 
         <!--my pokemon-->
         <Grid HorizontalAlignment="Left" Width="280" VerticalAlignment="Top" Margin="30,30,0,0">
-            <TextBlock x:Name="ppName" Foreground="#FFFFFF" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Vaporeon" VerticalAlignment="Top" Height="33" FontSize="20" FontWeight="Bold"/>
+            <TextBlock x:Name="playerPokemonName" Foreground="#FFFFFF" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Vaporeon" VerticalAlignment="Top" Height="33" FontSize="20" FontWeight="Bold"/>
             <TextBlock Foreground="#FFFFFF" HorizontalAlignment="Left" Margin="0,54,0,0" TextWrapping="Wrap" Text="CP" VerticalAlignment="Top" Height="19" Width="21" FontSize="12" FontWeight="Light"/>
-            <TextBlock x:Name="ppCP" Foreground="#FFFFFF" HorizontalAlignment="Left" Margin="20,50,0,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium"/>
-            <Rectangle x:Name="ppHPBackground" Fill="Black" HorizontalAlignment="Right" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="280" RadiusX="5" RadiusY="5" Opacity="0.5"/>
-            <Rectangle x:Name="ppHP" Fill="Orange" HorizontalAlignment="Right" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="265" RadiusX="5" RadiusY="5"/>
-            <Rectangle x:Name="ppHPAfterAttack" Fill="LightGreen" HorizontalAlignment="Right" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="250" RadiusX="5" RadiusY="5"/>
+            <TextBlock x:Name="playerPokemonCP" Foreground="#FFFFFF" HorizontalAlignment="Left" Margin="20,50,0,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium"/>
+            <Rectangle x:Name="playerPokemonHPBackground" Fill="Black" HorizontalAlignment="Right" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="280" RadiusX="5" RadiusY="5" Opacity="0.5"/>
+            <Rectangle x:Name="playerPokemonHP" Fill="Orange" HorizontalAlignment="Right" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="265" RadiusX="5" RadiusY="5"/>
+            <Rectangle x:Name="playerPokemonHPAfterAttack" Fill="LightGreen" HorizontalAlignment="Right" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="250" RadiusX="5" RadiusY="5"/>
         </Grid>
-        <Image x:Name="ppImage" Margin="47,0,490,107.6" gif:ImageBehavior.AnimatedSource="Images/egg.gif" Stretch="None" Height="233" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5"/>
+        <Image x:Name="playerPokemonImage" Margin="47,0,490,107.6" gif:ImageBehavior.AnimatedSource="Images/egg.gif" Stretch="None" Height="233" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5"/>
         <Image x:Name="playerPokemonImageAttack" Margin="47,0,490,107.6" gif:ImageBehavior.AnimatedSource="Images/battle/source.gif" Stretch="Fill" Height="233" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Opacity="0"/>
 
         <TextBlock x:Name="restBlock" Foreground="#FFFFFF" HorizontalAlignment="Right" Margin="0,53,374,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium" TextAlignment="Right"/>
         <TextBlock x:Name="bossRestBlock" Foreground="#FFFFFF" HorizontalAlignment="Right" Margin="0,93,360,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium" TextAlignment="Right"/>
 
         <!--Gyms' pokemon-->
-        <Image x:Name="opImage" Margin="533,0,117,191.6" gif:ImageBehavior.AnimatedSource="Images/egg.gif" Stretch="None" VerticalAlignment="Bottom" Height="149" RenderTransformOrigin="0.5,0.5"/>
+        <Image x:Name="opponentPokemonImage" Margin="533,0,117,191.6" gif:ImageBehavior.AnimatedSource="Images/egg.gif" Stretch="None" VerticalAlignment="Bottom" Height="149" RenderTransformOrigin="0.5,0.5"/>
         <Image x:Name="opponentPokemonImageAttack" Margin="533,0,117,191.6" gif:ImageBehavior.AnimatedSource="Images/battle/source.gif" Stretch="Fill" Height="233" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Visibility="Collapsed"/>
         <Grid HorizontalAlignment="Right" Width="280" VerticalAlignment="Top" Margin="0,30,30,0">
-            <TextBlock x:Name="opName" Foreground="#FFFFFF" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Vaporeon" VerticalAlignment="Top" Height="33" FontSize="20" FontWeight="Bold" TextAlignment="Right"/>
-            <TextBlock x:Name="opCP" Foreground="#FFFFFF" HorizontalAlignment="Right" Margin="0,50,0,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium" TextAlignment="Right"/>
-            <Rectangle x:Name="opHPBackground" Fill="Black" HorizontalAlignment="Left" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="280" RadiusX="5" RadiusY="5" Opacity="0.5"/>
-            <Rectangle x:Name="opHP" Fill="Orange" HorizontalAlignment="Left" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="63" RadiusX="5" RadiusY="5"/>
-            <Rectangle x:Name="opHPAfterAttack" Fill="Red" HorizontalAlignment="Left" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="24" RadiusX="5" RadiusY="5"/>
+            <TextBlock x:Name="opponentPokemonName" Foreground="#FFFFFF" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Vaporeon" VerticalAlignment="Top" Height="33" FontSize="20" FontWeight="Bold" TextAlignment="Right"/>
+            <TextBlock x:Name="opponentPokemonCP" Foreground="#FFFFFF" HorizontalAlignment="Right" Margin="0,50,0,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium" TextAlignment="Right"/>
+            <Rectangle x:Name="opponentPokemonHPBackground" Fill="Black" HorizontalAlignment="Left" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="280" RadiusX="5" RadiusY="5" Opacity="0.5"/>
+            <Rectangle x:Name="opponentPokemonHP" Fill="Orange" HorizontalAlignment="Left" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="63" RadiusX="5" RadiusY="5"/>
+            <Rectangle x:Name="opponentPokemonHPAfterAttack" Fill="Red" HorizontalAlignment="Left" Height="9" Margin="0,35,0,0" VerticalAlignment="Top" Width="24" RadiusX="5" RadiusY="5"/>
         </Grid>
 
         <Grid x:Name="skillButtonGroup" Visibility="Visible">
-            <Button x:Name="ppSkill0" BorderThickness="0" Background="{x:Null}" Width="150" Height="55" Margin="30,0,0,20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="Attack0" Opacity="0.5">
+            <Button x:Name="playerPokemonSkill0" BorderThickness="0" Background="{x:Null}" Width="150" Height="55" Margin="30,0,0,20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="Attack0" Opacity="0.5">
                 <Grid>
                     <Image Source="Images/button/empty.png" Width="128" Height="48" />
-                    <TextBlock x:Name="ppSkill0Name" Foreground="#FFFFFF" Text="SKILL 0" FontSize="11" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBlock x:Name="playerPokemonSkill0Name" Foreground="#FFFFFF" Text="SKILL 0" FontSize="11" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <TextBlock x:Name="timerBlock0" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" Text="Timer of skill 0" VerticalAlignment="Top" RenderTransformOrigin="0.259,-0.084" Margin="0,48,0,-23"/>
                 </Grid>
             </Button>
-            <Button x:Name="ppSkill1" BorderThickness="0" Background="{x:Null}" Width="150" Height="55" Margin="180,0,0,20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="Attack1" Opacity="0.5">
+            <Button x:Name="playerPokemonSkill1" BorderThickness="0" Background="{x:Null}" Width="150" Height="55" Margin="180,0,0,20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="Attack1" Opacity="0.5">
                 <Grid>
                     <Image Source="Images/button/empty.png" Width="128" Height="48" />
-                    <TextBlock x:Name="ppSkill1Name" Foreground="#FFFFFF" Text="SKILL 1" FontSize="11" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBlock x:Name="playerPokemonSkill1Name" Foreground="#FFFFFF" Text="SKILL 1" FontSize="11" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <TextBlock x:Name="timerBlock1" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" Text="Timer of skill 1" VerticalAlignment="Top" Margin="0,48,0,-23"/>
                 </Grid>
             </Button>
-            <Button x:Name="ppSkill2" BorderThickness="0" Background="{x:Null}" Width="150" Height="55" Margin="330,0,0,19.6" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="Attack2" Opacity="0.5">
+            <Button x:Name="playerPokemonSkill2" BorderThickness="0" Background="{x:Null}" Width="150" Height="55" Margin="330,0,0,19.6" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="Attack2" Opacity="0.5">
                 <Grid>
                     <Image Source="Images/button/empty.png" Width="128" Height="48" />
-                    <TextBlock x:Name="ppSkill2Name" Foreground="#FFFFFF" Text="SKILL 2" Height="31" FontSize="11" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="14,17,14,0"/>
+                    <TextBlock x:Name="playerPokemonSkill2Name" Foreground="#FFFFFF" Text="SKILL 2" Height="31" FontSize="11" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="14,17,14,0"/>
                     <TextBlock x:Name="timerBlock2" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" Text="Timer of skill 2" VerticalAlignment="Top" Margin="0,48,0,-23"/>
                 </Grid>
             </Button>
