--- a/PokemonGo/WpfApp2/Battle.xaml
+++ b/PokemonGo/WpfApp2/Battle.xaml
@@ -24,7 +24,7 @@
         <Image x:Name="ppImageAttack" Margin="47,0,490,107.6" gif:ImageBehavior.AnimatedSource="Images/battle/source.gif" Stretch="Fill" Height="233" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Visibility="Collapsed"/>
 
         <TextBlock x:Name="restBlock" Foreground="#FFFFFF" HorizontalAlignment="Right" Margin="0,53,374,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium" TextAlignment="Right"/>
-        <TextBlock x:Name="bossRestBlock" Foreground="#FFFFFF" HorizontalAlignment="Right" Margin="0,93,360,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium" TextAlignment="Right"/>
+        <TextBlock x:Name="StatusMessage" Foreground="#FFFFFF" HorizontalAlignment="Right" Margin="0,84,213,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="355" FontSize="16" FontWeight="Medium" TextAlignment="Center"/>
 
         <!--Gyms' pokemon-->
         <Image x:Name="opImage" Margin="533,0,117,191.6" gif:ImageBehavior.AnimatedSource="Images/egg.gif" Stretch="None" VerticalAlignment="Bottom" Height="149" RenderTransformOrigin="0.5,0.5"/>
