--- a/PokemonGo/WpfApp2/Battle.xaml
+++ b/PokemonGo/WpfApp2/Battle.xaml
@@ -4,11 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:gif="http://wpfanimatedgif.codeplex.com" 
+        xmlns:controls="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         mc:Ignorable="d"
         Title="Battle" Height="450" Width="800">
     <Grid>
         <Grid.Background>
-            <ImageBrush Stretch="UniformToFill" ImageSource="Images/battle/background.png"/>
+            <ImageBrush x:Name="bgPic" Stretch="UniformToFill" ImageSource="Images/battle/background.png"/>
         </Grid.Background>
 
         <!--my pokemon-->
@@ -77,54 +78,42 @@
         <!--Interface of change pokemon-->
         <Grid x:Name="GridChangePokemon" Margin="0,0,0,-300" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="260">
             <Rectangle Fill="#7F000000" HorizontalAlignment="Left" Height="278" RadiusY="5" RadiusX="5" VerticalAlignment="Top" Width="254"/>
-            <TextBlock Foreground="#FFFFFF" HorizontalAlignment="Center" Margin="0,22,0,0" TextWrapping="Wrap" Text="Switch in a new Pokemon?" VerticalAlignment="Top" Height="18" FontSize="10" FontWeight="Light"/>
-
-            <Button BorderThickness="0" Background="{x:Null}" Margin="0,0,172,116.4" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="ConfirmSwitchPokemon">
-                <StackPanel>
-                    <DockPanel Margin="5,0,0,5">
-                        <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="CP" Width="16" FontSize="10" FontWeight="Light"/>
-                        <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="1485" FontSize="14" FontWeight="Medium"/>
-                    </DockPanel>
-                    <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
-                        <Rectangle.Fill>
-                            <ImageBrush ImageSource="Images/egg.gif" Stretch="None">
-                                <ImageBrush.RelativeTransform>
-                                    <TransformGroup>
-                                        <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
-                                    </TransformGroup>
-                                </ImageBrush.RelativeTransform>
-                            </ImageBrush>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                    <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="Vaporeon" FontSize="10" FontWeight="Light" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" VerticalAlignment="Top" Width="258">
+                <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="230">
+                    <TextBlock Foreground="#FFFFFF" HorizontalAlignment="Center"  Margin="52,22,10,0" TextWrapping="Wrap" Text="Choose a pokemon for battle!" VerticalAlignment="Top" Height="18" FontSize="12" FontWeight="DemiBold"/>
+                    <ItemsControl Name="PlayerPokemonList" Margin="10">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <controls:UniformGrid Columns="3"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="ButtonClickSelectPokemon">
+                                    <StackPanel>
+                                        <DockPanel Margin="5,0,0,5">
+                                            <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="CP" Width="16" FontSize="10" FontWeight="Light"/>
+                                            <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="{Binding Path=GetCP}" FontSize="14" FontWeight="Medium"/>
+                                        </DockPanel>
+                                        <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
+                                            <Rectangle.Fill>
+                                                <ImageBrush ImageSource="{Binding Path=GetImageLocation}" Stretch="Uniform">
+                                                    <ImageBrush.RelativeTransform>
+                                                        <TransformGroup>
+                                                            <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
+                                                        </TransformGroup>
+                                                    </ImageBrush.RelativeTransform>
+                                                </ImageBrush>
+                                            </Rectangle.Fill>
+                                        </Rectangle>
+                                        <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="{Binding Path=Name}" FontSize="10" FontWeight="Light" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+                                    </StackPanel>
+                                </Button>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
                 </StackPanel>
-            </Button>
-            <Button BorderThickness="0" Background="{x:Null}" Margin="0,0,0,116.4" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="ConfirmSwitchPokemon">
-                <StackPanel>
-                    <DockPanel Margin="5,0,0,5">
-                        <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="CP" Width="16" FontSize="10" FontWeight="Light"/>
-                        <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="1485" FontSize="14" FontWeight="Medium"/>
-                    </DockPanel>
-                    <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
-                        <Rectangle.Fill>
-                            <ImageBrush ImageSource="Images/pokemon/Charmanderee.gif">
-                                <ImageBrush.RelativeTransform>
-                                    <TransformGroup>
-                                        <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
-                                    </TransformGroup>
-                                </ImageBrush.RelativeTransform>
-                            </ImageBrush>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                    <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="Vaporeon" FontSize="10" FontWeight="Light" HorizontalAlignment="Center" Margin="0,5,0,0"/>
-                </StackPanel>
-            </Button>
-
-            <Button BorderThickness="0" Background="{x:Null}" Width="40" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="SwitchPokemon" Margin="106,0,106,15">
-                <StackPanel>
-                    <Image Source="Images/button/close.png" Width="30" Height="30" />
-                </StackPanel>
-            </Button>
+            </ScrollViewer>
         </Grid>
         <Image x:Name="criticalText" Source ="Images/battle/criticalText.png" Visibility="Hidden" HorizontalAlignment="Left" Height="235" VerticalAlignment="Top" Width="367" Margin="212,154,0,0"/>
     </Grid>
